[package]
name = "crate_name"
version = "0.1.0"
volatile = "0.2.6"
edition = "2021"
authors = ["Author Name <author@example.com>"]

# the profile used for `cargo build`
[profile.dev]

# the profile used for `cargo build --release`
[profile.release]

[[bin]]
name = "blog_os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bootloader = "0.9"